# todoist-cli

./: Cargo.toml
src/: main.rs  sync.rs  tests.rs
src/utils/: sync.rs
