[package]
name = "todo"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
directories = "5.0.1"
keyring = "2.3.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde_json = "1.0.149"
